objects/License__c.object
<CustomObject>
    <label>License</label>
    <pluralLabel>Licenses</pluralLabel>
    <nameField>
        <label>License Number</label>
        <type>AutoNumber</type>
        <displayFormat>LIC-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <type>Picklist</type>
        <picklist>
            <picklistValues>
                <fullName>Type1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type2</fullName>
            </picklistValues>
        </picklist>
    </fields>
    <fields>
        <fullName>Issue_Date__c</fullName>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
        </picklist>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To</label>
        <type>Lookup</type>
        <referenceTo>User</referenceTo>
    </fields>
    <fields>
        <fullName>Document_Attachment__c</fullName>
        <label>Document Attachment</label>
        <type>File</type>
    </fields>
</CustomObject>